static/assets/css/base.css
/* ... */
.moj-timeline__document-link:focus {
  color: #0b0c0c;
}

/* ==========================================================================
   #TICKET PANEL
   ========================================================================== */
.moj-ticket-panel {
  display: block;
  margin-right: 0;
  flex-wrap: wrap;
}
@media (min-width: 48.0625em) {
  .moj-ticket-panel--inline {
    display: flex;
    flex-wrap: nowrap;
  }
  .moj-ticket-panel--inline > * + * {
    margin-left: 15px;
  }
}
.moj-ticket-panel__content *:last-child {
  margin-bottom: 0;
}
.moj-ticket-panel__content {
  display: block;
  position: relative;
  background-color: #f3f2f1;
  padding: 20px;
  margin-bottom: 15px;
  flex-grow: 1;
  border-left: 4px solid transparent;
}
.moj-ticket-panel__content--grey {
  border-left-color: #b1b4b6;
}
.moj-ticket-panel__content--blue {
  border-left-color: #1d70b8;
}
.moj-ticket-panel__content--red {
  border-left-color: #d4351c;
}
.moj-ticket-panel__content--yellow {
  border-left-color: #ffdd00;
}
.moj-ticket-panel__content--green {
  border-left-color: #00703c;
}
.moj-ticket-panel__content--purple {
  border-left-color: #4c2c92;
}
.moj-ticket-panel__content--orange {
  border-left-color: #f47738;
}

.js-enabled .moj-js-hidden {
  display: none;
}

.moj-hidden {
  display: none;
}

.moj-width-container {
  max-width: 960px;
  margin: 0 15px;
}
@media (min-width: 40.0625em) {
  .moj-width-container {
    margin: 0 30px;
  }
}
@media (min-width: 1020px) {
  .moj-width-container {
    margin: 0 auto;
  }
}

.js-required {
  display: none;
}

@media (min-width: 40.0625em) {
  #sticky-sidebar {
    position: sticky;
    top: 10px;
    max-height: 100vh;
    overflow-y: auto;
    margin-bottom: 30px;
  }
}
.summary-card {
  background-color: #f3f2f1;
  padding: 15px 20px;
  margin-bottom: 30px;
}

/*# sourceMappingURL=base.css.map */

